trim strings to assure linebreaks are handled correctly across platforms