@@ -210,9 +210,9 @@ public class AASInterfaceTest {
         assertTrue(contentTypeHeader.startsWith("multipart/form-data"));
 
         Path expectedPayloadPath = Paths.get("src/test/resources/expectedMultiPartPayloadThumbnail.txt");
-        String expectedPayload = new String(Files.readAllBytes(expectedPayloadPath), StandardCharsets.UTF_8);
+        String expectedPayload = Files.readString(expectedPayloadPath, StandardCharsets.UTF_8).trim();
 
-        String actualRequestBody = recordedRequest.getBody().readUtf8();
+        String actualRequestBody = recordedRequest.getBody().readUtf8().trim();
         assertEquals(expectedPayload, actualRequestBody);
     }
 
